@@ -1,3 +1,7 @@
+2009-03-27  Mark Ellis  <mark@mpellis.org.uk>
+
+	* enhance pyrapi2 registry query_value, some small fixes
+
 2009-03-26  Mark Ellis  <mark@mpellis.org.uk>
 
 	* adjust RapiSession to allow for multiple devices,
